--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= link_to @song.title, song_path(@song) %></h1>
 
-<li><%= display_artist @song %></li>
+<p><%= display_artist @song %></p>
 
 <%= link_to "All Songs", songs_path %>
